--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>批量文件操作工具</title>
     <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link type="text/css" rel="styleSheet"  href="./static/css/bootstrap.min.css" />
+    <link type="text/css" rel="styleSheet" href="./static/css/bootstrap.min.css" />
     <style>
-        ul.list-group{
-            height:100px;
+        ul.list-group {
+            height: 100px;
         }
-        td{
+
+        td {
             white-space: nowrap;
         }
-        #filebox-readbar > *{
+
+        #filebox-readbar>* {
             margin-bottom: 10px;
         }
-        #filebox-filterbar > *{
+
+        #filebox-filterbar>* {
             margin-bottom: 10px;
         }
-        #filebox-actionbar > *{
+
+        #filebox-actionbar>* {
             margin-bottom: 10px;
         }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container" style="margin-top: 20px">
         <div class="row">
             <div class="card col-md-12">
                 <div class="card-body" style="border-bottom: solid 1px rgba(0,0,0,.125);" id="filebox-readbar">
-                    
+
                 </div>
                 <div class="card-body" style="border-bottom: solid 1px rgba(0,0,0,.125);" id="filebox-filterbar">
                     <button type="button" class="btn btn-secondary btn-sm">Primary</button>
@@ -42,7 +48,8 @@
                     <button type="button" class="btn btn-secondary btn-sm">Dark</button>
                     <button type="button" class="btn btn-secondary btn-sm">Link</button>
                 </div>
-                <div class="card-body" style="padding: 0px; margin: 0px;border-bottom: solid 1px rgba(0,0,0,.125); height:500px;overflow-y:scroll;">
+                <div class="card-body"
+                    style="padding: 0px; margin: 0px;border-bottom: solid 1px rgba(0,0,0,.125); height:500px;overflow-y:scroll;">
                     <table class="table table-sm table-bordered">
                         <thead>
                             <tr>
@@ -77,12 +84,14 @@
                     <button type="button" class="btn btn-secondary btn-sm">Info</button>
                     <button type="button" class="btn btn-secondary btn-sm">Light</button>
                     <button type="button" class="btn btn-secondary btn-sm">Dark</button>
-                    <button type="button" class="btn btn-secondary btn-sm"><input type="text" class="form-control input-sm" id="usr" placeholder=""></button>
+                    <button type="button" class="btn btn-secondary btn-sm"><input type="text"
+                            class="form-control input-sm" id="usr" placeholder=""></button>
                 </div>
             </div>
         </div>
     </div>
-  </body>
-  <script src="./renderer.js"></script>
-  <script src="./static/js/"></script>
+</body>
+<script src="./renderer.js"></script>
+<script src="./static/js/"></script>
+
 </html>
