--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="card-body"
                     style="padding: 0px; margin: 0px;border-bottom: solid 1px rgba(0,0,0,.125); height:500px;overflow-y:scroll;">
                     <table class="table table-sm table-bordered" id=""></table>
-                    <div id="filebox-files" style="height: 500px;" class="ag-theme-balham col-md-12"></div>
+                    <div id="filebox-files" style="height: 500px;" class="ag-theme-bootstrap col-md-12"></div>
                 </div>
                 <div class="card-body" id="filebox-actionbar">
                     <button type="button" class="btn btn-secondary btn-sm">Primary</button>
