--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Electron Boilerplate Vue</title>
+    <title>文件助手</title>
   </head>
   <body>
       <div id="app"></app>
